--- a/encer.css
+++ b/encer.css
@@ -44,9 +44,9 @@ body *{
 
 #container{
   width: 100%;
-  max-width: 588px;
-  margin: 56px auto 0px;
-  padding: 0 24px;
+  max-width: 700px;
+  margin: 58px auto 0px;
+  padding: auto 24px;
 }
 
 #profile{
@@ -103,12 +103,17 @@ body *{
   border-radius: 9999px;
 }
 
+hr{
+  margin-top: 20px;
+}
+
 ul{
   list-style: none;
   display: flex;
   flex-direction: column;
   gap: 16px;
-  padding: 24px 0px;
+  padding: 1px 0px;
+  margin: 5px;
 }
 
 ul li a{
