--- a/obj.css
+++ b/obj.css
@@ -12,6 +12,7 @@
   --surface-color-hover: rgba(255, 255, 255, 0.05);
   --highlight-color: rgba(255, 255, 255, 0.2);
   --switch-bg-url: url(./assets/moon-stars.svg);
+  --border-table: white;
 }
 
 .light{
@@ -22,6 +23,7 @@
   --surface-color-hover: rgba(0, 0, 0, 0.02);
   --highlight-color: rgba(0, 0, 0, 0.1);
   --switch-bg-url: url(./assets/sun.svg);
+  --border-table: black;
 }
 
 body{
@@ -108,7 +110,7 @@ ul{
   display: flex;
   flex-direction: column;
   gap: 16px;
-  padding: 24px 0px;
+  padding: 15px 0px;
 }
 
 ul li a{
@@ -187,4 +189,14 @@ footer{
   to{
     left: 0;
   }
+}
+
+table{
+  border-collapse: collapse;
+  margin: 10px auto;
+}
+
+td, th{
+  border: 1px solid var(--border-table);
+  padding: 5px;
 }
