--- a/encer.css
+++ b/encer.css
@@ -34,7 +34,7 @@ body{
 
   /*background: color image repeat position/size*/
   background: var(--bg-url) no-repeat top center/cover;
-  height: 100vh;
+  height: auto;
 }
 
 body *{
